# mps-lambda-proxy

./: .gitignore  README.md  flowchart.md  lambda_function.py  pyproject.toml  samconfig.toml  template.yaml
.aws-sam/: build.toml
events/: event.json
mps_iiif_lambda_proxy/: proxy.py
proxy/: proxy.py  requirements.txt
tests/: requirements.txt
