[tool.poetry]
name = "mps-iiif-lambda-proxy"
version = "0.1.0"
description = "A Flask app to proxy requests to MPS network-restricted admin endpoints"
authors = ["Cole Crawford <cole_crawford@fas.harvard.edu>"]
license = "Apache 2"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.23.0"
zappa = "^0.51.0"
flask = "^1.1.1"
MarkupSafe = "2.0.1"
pyOpenSSL = "^22.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api" 