[tool.poetry]
name = "mps-lambda-proxy"
version = "0.1.0"
description = "Lambda proxy for MPS Admin endpoints"
authors = ["Cole Crawford <cole_crawford@fas.harvard.edu>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
pytest-mock = "^3.7.0"
boto3 = "^1.21.46"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
